--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 					<a class="nav-link  text-black" href="#gallery">Gallery</a>
 				</li>
 				<li class="nav-item px-3">
-					<a class="nav-link text-black" href="#contact"> Contact Me </a>
+					<a class="nav-link text-black" href="#contact"> Contact me </a>
 				</li>
 			</ul>
 		</div>
@@ -41,14 +41,10 @@
 	<section class="landing">
 		<div class="wrapper px-4 pt-10">
 			<div class="" data-aos="fade-up" data-aos-delay="300" data-aos-anchor-placement="bottom-bottom">
-				<h1>Welcome <span>to my website!</span></h1>
+				<h1>Welcome <span>to my website<span class="green">.</span></span></h1>
 				<p data-aos-delay="2000">I am a student from Zuitt Bootcamp. I make this Website porfolio for my Capstone 1 Project.
 					Thank you for visiting my site. To learn more about me please click the arrow button below.
 				</p>
-				<!-- <p>I am a student from Zuitt Bootcamp. I make this Website porfolio for my Capstone 1 Project.
-					Thank you for visiting my site. To learn more about me please click the arrow button below.
-				</p> -->
-				<!-- <a href="#about" class="btn btn-dark px-5 py-3 text-uppercase">Learn more about me</a> -->
 			</div>
 
 
@@ -66,7 +62,7 @@
 
 		<section id="about" class="about px-4 text-white">
 			<div class="container-fluid text-center" data-aos="fade-up">
-				<h2 class="text-center display-7"> About Me</h2>
+				<h2 class="text-center display-7"> About me</h2>
 
 				<p>Hi! Im Niel I am enrolled in Zuitt Bootcamp. </p>
 				<p>During my training in Zuitt, I learn how to use HTML, CSS, Bootstrap and other technologies that they teach.</p>
@@ -133,12 +129,12 @@
 			</div>
 		</section>
 
-		<section class="contact px-4">
+		<section class="contact px-4" id="contact">
 			<div class="containe-fluid">
 				<div class="row main-row justify-content-center pt-5">
 					<div class="cold-3 col-md-6 col-lg-6 form-wrapper">
 						<h2 class="text-center display-7">
-							Get In Touch
+							Contact me
 						</h2>
 
 						<div class="form">
@@ -146,7 +142,7 @@
 							<form class="mbr-form"><input type="hidden" name="email">
 
 								<div class="input-wrap pb-3" data-for="email">
-									<label class="form-label-outside mbr-lighter" for="email">E-Mail</label>
+									<label class="form-label-outside mbr-lighter" for="email">E-mail</label>
 									<input type="email" class="form-control" name="email" data-form-field="Email" required="" id="email">
 								</div>
 
