--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 		<div class="wrapper px-4 pt-10">
 			<div class="" data-aos="fade-up" data-aos-delay="300" data-aos-anchor-placement="bottom-bottom">
 				<h1>Welcome <span>to my website<span class="green">.</span></span></h1>
-				<p data-aos-delay="2000">I am a student from Zuitt Bootcamp. I make this Website porfolio for my Capstone 1 Project.
+				<p data-aos-delay="2000">I am a student from Zuitt Bootcamp. I make this website portfolio for my Capstone 1 Project.
 					Thank you for visiting my site. To learn more about me please click the arrow button below.
 				</p>
 			</div>
