--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
 		</button>
 
 		<div class="collapse navbar-collapse" id="navbarSupportedContent">
-			<ul class="navbar-nav ml-auto active">
+			<ul class="navbar-nav ml-auto ">
+				<li class="nav-item px-3 ">
+					<a class="nav-link text-black" href="#">Home</a>
+				</li>
 				<li class="nav-item px-3 ">
 					<a class="nav-link text-black" href="#about">About me</a>
 				</li>
@@ -133,7 +136,7 @@
 		<section class="contact px-4" id="contact">
 			<div class="containe-fluid">
 				<div class="row main-row justify-content-center pt-5">
-					<div class="cold-3 col-md-6 col-lg-6 form-wrapper">
+					<div class="c-wrapper cold-3 col-md-6 col-lg-6 form-wrapper">
 						<h2 class="text-center display-7" data-aos="fade-up" data-aos-delay="400">
 							Contact me
 						</h2>
@@ -155,7 +158,7 @@
 									<textarea type="text" class="form-control" name="message" rows="4" id="message"></textarea>
 								</div>
 
-								<span class="input-group-btn"><button type="submit" class="btn btn-md btn-form btn-secondary display-2">Send</button></span>
+								<span class="input-group-btn"><button type="submit" class="btn btn-md btn-form btn-dark display-2">Send</button></span>
 							</form>
 						</div>
 					</div>
