--- a/index.html
+++ b/index.html
@@ -89,44 +89,65 @@
 
 					<div class="row">
 						<div class="col-xl-3 col-lg-4 col-md-6 mb-4">
-							<div class="bg-white rounded shadow-sm" data-aos="zoom-in" data-aos-delay="300"><img src="images/image 1.png" alt="" class="img-fluid card-img-top">
+							<div class="bg-white rounded shadow-sm" data-aos="zoom-in" data-aos-delay="300"><img src="images/d.png" alt="" class="img-fluid card-img-top">
 							</div>
 						</div>
 
 						<div class="col-xl-3 col-lg-4 col-md-6 mb-4">
-							<div class="bg-white rounded shadow-sm" data-aos="zoom-in" data-aos-delay="300"><img src="images/image 2.png" alt="" class="img-fluid card-img-top">
+							<div class="bg-white rounded shadow-sm" data-aos="zoom-in" data-aos-delay="300"><img src="images/e.png" alt="" class="img-fluid card-img-top">
 							</div>
 						</div>
 
 						<div class="col-xl-3 col-lg-4 col-md-6 mb-4">
-							<div class="bg-white rounded shadow-sm" data-aos="zoom-in" data-aos-delay="300"><img src="images/image 3.png" alt="" class="img-fluid card-img-top">
+							<div class="bg-white rounded shadow-sm" data-aos="zoom-in" data-aos-delay="300"><img src="images/h.png" alt="" class="img-fluid card-img-top">
 							</div>
 						</div>
 
 						<div class="col-xl-3 col-lg-4 col-md-6 mb-4">
-							<div class="bg-white rounded shadow-sm" data-aos="zoom-in" data-aos-delay="300"><img src="images/image 4.png" alt="" class="img-fluid card-img-top">
+							<div class="bg-white rounded shadow-sm" data-aos="zoom-in" data-aos-delay="300"><img src="images/x.png" alt="" class="img-fluid card-img-top">
 							</div>
 						</div>
 
 						<div class="col-xl-3 col-lg-4 col-md-6 mb-4">
-							<div class="bg-white rounded shadow-sm" data-aos="zoom-in" data-aos-delay="300"><img src="images/image 5.png" alt="" class="img-fluid card-img-top">
+							<div class="bg-white rounded shadow-sm" data-aos="zoom-in" data-aos-delay="300"><img src="images/y.png" alt="" class="img-fluid card-img-top">
 							</div>
 						</div>
 
 						<div class="col-xl-3 col-lg-4 col-md-6 mb-4">
-							<div class="bg-white rounded shadow-sm" data-aos="zoom-in" data-aos-delay="300"><img src="images/image 6.png" alt="" class="img-fluid card-img-top">
+							<div class="bg-white rounded shadow-sm" data-aos="zoom-in" data-aos-delay="300"><img src="images/z.png" alt="" class="img-fluid card-img-top">
 							</div>
 						</div>
 
 						<div class="col-xl-3 col-lg-4 col-md-6 mb-4">
-							<div class="bg-white rounded shadow-sm" data-aos="zoom-in" data-aos-delay="300"><img src="images/image 7.png" alt="" class="img-fluid card-img-top">
+							<div class="bg-white rounded shadow-sm" data-aos="zoom-in" data-aos-delay="300"><img src="images/v.png" alt="" class="img-fluid card-img-top">
 							</div>
 						</div>
 
 						<div class="col-xl-3 col-lg-4 col-md-6 mb-4">
-							<div class="bg-white rounded shadow-sm" data-aos="zoom-in" data-aos-delay="300"><img src="images/image 8.png" alt="" class="img-fluid card-img-top">
+							<div class="bg-white rounded shadow-sm" data-aos="zoom-in" data-aos-delay="300"><img src="images/i.png" alt="" class="img-fluid card-img-top">
 							</div>
 						</div>
+
+						<div class="col-xl-3 col-lg-4 col-md-6 mb-4">
+							<div class="bg-white rounded shadow-sm" data-aos="zoom-in" data-aos-delay="300"><img src="images/aa.png" alt="" class="img-fluid card-img-top">
+							</div>
+						</div>
+
+						<div class="col-xl-3 col-lg-4 col-md-6 mb-4">
+							<div class="bg-white rounded shadow-sm" data-aos="zoom-in" data-aos-delay="300"><img src="images/aa.png" alt="" class="img-fluid card-img-top">
+							</div>
+						</div>
+
+						<div class="col-xl-3 col-lg-4 col-md-6 mb-4">
+							<div class="bg-white rounded shadow-sm" data-aos="zoom-in" data-aos-delay="300"><img src="images/bb.png" alt="" class="img-fluid card-img-top">
+							</div>
+						</div>
+
+						<div class="col-xl-3 col-lg-4 col-md-6 mb-4">
+							<div class="bg-white rounded shadow-sm" data-aos="zoom-in" data-aos-delay="300"><img src="images/vv.png" alt="" class="img-fluid card-img-top">
+							</div>
+						</div>
+
 
 					</div>
 				</div>
@@ -137,8 +158,10 @@
 			<div class="containe-fluid">
 				<div class="row main-row justify-content-center pt-5">
 					<div class="c-wrapper cold-3 col-md-6 col-lg-6 form-wrapper">
-						<h2 class="text-center display-7" data-aos="fade-up" data-aos-delay="400">
+						<!-- <i class="bi bi-telegram text-center green mx-auto d-block" data-aos="fade-up-right" data-aos-delay="600"></i> -->
+						<h2 class="text-center display-7">
 							Contact me
+							<i class="bi bi-telegram green" data-aos="fade-up-right" data-aos-delay="800"></i>
 						</h2>
 
 						<div class="form" data-aos="fade-up" data-aos-delay="400">
