--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 						</div>
 
 						<div class="col-xl-3 col-lg-4 col-md-6 mb-4">
-							<div class="bg-white rounded shadow-sm" data-aos="zoom-in" data-aos-delay="300"><img src="images/aa.png" alt="" class="img-fluid card-img-top">
+							<div class="bg-white rounded shadow-sm" data-aos="zoom-in" data-aos-delay="300"><img src="images/cc.png" alt="" class="img-fluid card-img-top">
 							</div>
 						</div>
 
